# machine-prime

./: CHANGLOG.md  Cargo.toml  Makefile  PERFORMANCE.md  README.md  cHANGELOG.md  check.rs  primality.bat  primes.rs  qft.rs
benches/: speed.rs
binding/: README.md  primality.f08  primality.h  primality.hs  primality.jl  primality.py  primality.rs
binding/Ada/: machine_prime-primality.adb  machine_prime-primality.ads  machine_prime.ads
examples/: primevector.rs  strong.rs
src/: check.rs  double.rs  hashbase.rs  lib.rs  primes.rs  wide.rs
