[package]
name = "machine-prime"
version = "1.0.0"
edition = "2021"
author = ["JASory jasory@rust-cas.org"]
description = "ne plus ultra primality testing for machine-sized integers"
keywords = ["no-std","primality", "prime", "number-theory"]
categories = ["no-std","mathematics"]
license = "CC0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic

[[bench]]
name = "speed"
harness=false


