[package]
name = "machine-prime"
version = "1.5.3"
edition = "2021"
author = ["JASory jasory@rust-cas.org"]
description = "ne plus ultra primality testing for machine-sized integers"
repository = "https://github.com/JASory/machine-prime"
keywords = ["no-std","const","primality", "prime", "number-theory"]
categories = ["no-std","mathematics"]
license = "CC0-1.0"
readme = "README.md"

[dependencies]


[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic

[[bench]]
name = "speed"
harness=false

[features]
lucas = [] # Adds Trial division and Lucas table
table = [] # Swaps Lucas with hashtable
ssmr = [] # Single shot branching
wide = [] # 128-bit primality
internal=[] # Exposes internal functions
default = ["table"]
